--- a/placeholder.html
+++ b/placeholder.html
@@ -52,8 +52,8 @@
 </head>
 <body>
     <div class="error-container">
-        <h1>Oops!</h1>
-        <p>This appears to either not exist, or hasn't been made yet. :/</p>
+        <h1>:(</h1>
+        <p>I can't upload folders onto Github from a chromebook, so this hasnt been made yet.</p>
         <a href="/">Return to Homepage</a>
     </div>
 </body>
