Change file path in website

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>Menu</h2>
         <a href="https://github.com/mrsofanthiel">My Git</a>
         <a href="webix.html">Web Linux</a>
-        <a href="egcraft0.html">EaglerCraft Mirror</a>
+        <a href="eaglercraft.html">EaglerCraft Mirror</a>
         <a href="placeholder.html">Epiccues rehost</a>
     </div>
     <div class="content">
