Added a link to the online version of AAAAXY
this game is awesome

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <a href="webix.html">Web Linux</a>
         <a href="eaglercraft.html">EaglerCraft Mirror</a>
         <a href="placeholder.html">Epiccues rehost</a>
+        <a href="https://rm.cloudns.org/aaaaxy/current/aaaaxy.html">Online AAAAXY</a>
     </div>
     <div class="content">
         <h1>Welcome to my Website!</h1>
