Update index.html to add a link to readme

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 </head>
 <body>
     <div class="sidebar">
-        <h2>Menu</h2>
+        <h2>Menu</h2> 
+        <a href="https://github.com/mrsofanthiel/mrsofanthiel.github.io/blob/main/README.md">Important Readme + Credits</a>
         <a href="https://github.com/mrsofanthiel">My Git</a>
         <a href="webix.html">Web Linux</a>
         <a href="eaglercraft.html">EaglerCraft Mirror</a>
