--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <div class="sidebar">
         <h2>Menu</h2> 
-        <a href="https://github.com/mrsofanthiel/mrsofanthiel.github.io/blob/main/README.md">Important Readme + Credits</a>
+        <a href="https://github.com/mrsofanthiel/mrsofanthiel.github.io/blob/main/README.md">Important Readme/a>
         <a href="https://github.com/mrsofanthiel">My Git</a>
         <a href="webix.html">Web Linux</a>
         <a href="eaglercraft.html">EaglerCraft Mirror</a>
@@ -48,7 +48,7 @@
     </div>
     <div class="content">
         <h1>Welcome to my Website!</h1>
-        <p>It's looking a little bland at the moment, but periodically, stuff will get added here soon.<br>Meanwhile, feel free to check out the stuff on the left. You'll find a lot of various stuffs over there.<br>(PS: Most of the stuff over there, I didn't make. Credits are found in the git repo.)</p>
+        <p>It's looking a little bland at the moment, but periodically, stuff will get added here soon.<br>Meanwhile, feel free to check out the stuff on the left. You'll find a lot of various stuffs over there.<br><br>If you don't know where to start, try the Readme. I also put credits there.<br><br>(PS: Most of the stuff over there, I didn't make. Credits are found in the git repo.)</p>
     </div>
 </body>
 </html>
