--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <div class="sidebar">
         <h2>Menu</h2> 
-        <a href="https://github.com/mrsofanthiel/mrsofanthiel.github.io/blob/main/README.md">Important Readme/a>
+        <a href="https://github.com/mrsofanthiel/mrsofanthiel.github.io/blob/main/README.md">Important Readme</a>
         <a href="https://github.com/mrsofanthiel">My Git</a>
         <a href="webix.html">Web Linux</a>
         <a href="eaglercraft.html">EaglerCraft Mirror</a>
