--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>Menu</h2> 
         <a href="https://github.com/mrsofanthiel/mrsofanthiel.github.io/blob/main/README.md">Important Readme</a>
         <a href="https://github.com/mrsofanthiel">My Git</a>
-        <a href="webix.html">Online RISC Linux</a>
+        <a href="pageWebix.html">Online RISC Linux</a>
         <a href="remilinuxide.html">Linux IDE</a>
         <a href="eaglercraft.html">EaglerCraft Mirror</a>
         <a href="placeholder.html">Epiccues rehost</a>
