--- a/pageWebix.html
+++ b/pageWebix.html
@@ -40,7 +40,7 @@
     <div class="sidebar">
         <h2>Menu</h2> 
         <a href="/">Go Back</a>
-        <a href="placeholder.html">Take me there</a>
+        <a href="webix.html">Take me there</a>
     </div>
     <div class="content">
         <h1>Online RISC Linux</h1>
