--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="https://github.com/mrsofanthiel/mrsofanthiel.github.io/blob/main/README.md">Important Readme</a>
         <a href="https://github.com/mrsofanthiel">My Git</a>
         <a href="pageWebix.html">Online RISC Linux</a>
-        <a href="remilinuxide.html">Linux IDE</a>
+        <a href="pageRemi.html">Linux IDE</a>
         <a href="eaglercraft.html">EaglerCraft Mirror</a>
         <a href="placeholder.html">Epiccues rehost</a>
         <a href="https://rm.cloudns.org/aaaaxy/current/aaaaxy.html">Online AAAAXY</a>
