--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="pageWebix.html">Online RISC Linux</a>
         <a href="pageRemi.html">Linux IDE</a>
         <a href="pageEagler.html">EaglerCraft Mirror</a>
-        <a href="placeholder.html">Epiccues rehost</a>
+        <a href="pageEpicques.html">Epicques rehost</a>
         <a href="https://rm.cloudns.org/aaaaxy/current/aaaaxy.html">Online AAAAXY</a>
     </div>
     <div class="content">
