--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a href="pageRemi.html">Linux IDE</a>
         <a href="pageEagler.html">EaglerCraft Mirror</a>
         <a href="pageEpicques.html">Epicques rehost</a>
-        <a href="https://rm.cloudns.org/aaaaxy/current/aaaaxy.html">Online AAAAXY</a>
+        <a href="pageAAAAXY.html">Online AAAAXY</a>
     </div>
     <div class="content">
         <h1>Welcome to my Website!</h1>
