--- a/remilinuxide.html
+++ b/remilinuxide.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Weblinux 720p</title>
-  <meta name="description" content="Weblinux in 720p for recording purposes">
+  <title>Weblinux</title>
+  <meta name="description" content="Weblinux">
   <meta name="author" content="remi sharrock">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
@@ -12,7 +12,7 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  <iframe src="https://remisharrock.github.io/sysbuild/" marginwidth="0" scrolling="yes" allowfullscreen="" allowtransparency="true" width="1280px" height="720px"></iframe>
+  <iframe src="https://remisharrock.github.io/sysbuild/" marginwidth="0" scrolling="yes" allowfullscreen="true" allowtransparency="true" width="100vw" height="100vh"></iframe>
 </body>
 </html>
 
