--- a/pageRemi.html
+++ b/pageRemi.html
@@ -40,7 +40,7 @@
     <div class="sidebar">
         <h2>Menu</h2> 
         <a href="/">Go Back</a>
-        <a href="remilinuxide.html">Take me there</a>
+        <a href="sysbuild/index.html">Take me there</a>
     </div>
     <div class="content">
         <h1>Remi's Linux IDE</h1>
