--- a/pageRemi.html
+++ b/pageRemi.html
@@ -44,7 +44,7 @@
     </div>
     <div class="content">
         <h1>Remi's Linux IDE</h1>
-        <p>This is an emulator that runs Linux in a x86-64 virtual machine.<br>Not many people have heard about this, but it does exist, and it allows you to code more easily for linux when you are in school.<br><br>The project was made by Remi Sharrock.</p>
+        <p>This is an emulator that runs Linux in a x86-64 virtual machine.<br>Not many people have heard about this, but it does exist, and it allows you to code more easily for linux when you are in school.<br><br>Note: This is for advanced linux users looking to code programs, not only as a novelty. For a less practical use, check out the Online RISC Linux.<br><br>The project was made by Remi Sharrock.</p>
     </div>
 </body>
 </html>
