Made it obvious that there was more stuff here now

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="content">
         <h1>Welcome to my Website!</h1>
-        <p>It's looking a little bland at the moment, but periodically, stuff will get added here soon.<br>Meanwhile, feel free to check out the stuff on the left. You'll find a lot of various stuffs over there.<br><br>If you don't know where to start, try the Readme. I also put credits there.<br><br>(PS: Most of the stuff over there, I didn't make. Credits are found in the git repo.)</p>
+        <p>I have been slowly improving the library of useful (and fun) things on that bar over there. Feel free to check it out! Also, I added a lot more pages to the website, like an in-built-guide to multiplayer EaglerCraft. Feel free to enjoy roaming and mucking about.<br><br>If you don't know where to start, try the Readme. I also put credits there.<br><br>(PS: Most of the stuff over there, I didn't make. Credits are found in the git repo.)</p>
     </div>
 </body>
 </html>
