--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <a href="pageEagler.html">EaglerCraft Mirror</a>
         <a href="pageEpicques.html">Epicques rehost</a>
         <a href="pageAAAAXY.html">Online AAAAXY</a>
+        <a href="Annoying Website/index.html">:)</a>
     </div>
     <div class="content">
         <h1>Welcome to my Website!</h1>
