--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <a href="pageEagler.html">EaglerCraft Mirror</a>
         <a href="pageEpicques.html">Epicques rehost</a>
         <a href="pageAAAAXY.html">Online AAAAXY</a>
-        <a href="Annoying website/index.html">:)</a>
+        <a href="Annoying website/index.html">:) (Doesn't work)</a>
+        <a href="pagePluto.html">Web Desktop</a>
     </div>
     <div class="content">
         <h1>Welcome to my Website!</h1>
