--- a/pagePluto.html
+++ b/pagePluto.html
@@ -40,7 +40,7 @@
     <div class="sidebar">
         <h2>Menu</h2> 
         <a href="/">Return to hub</a>
-        <a href="https://mrsofanthiel.github.io/SuperTestRepo/index.html">Take me there</a>
+        <a href="https://mrsofanthiel.github.io/Pluto-Desktop/index.html">Take me there</a>
     </div>
     <div class="content">
         <h1>Pluto Web Desktop</h1>
