Change Pluto to WebDesktop

--- a/pagePluto.html
+++ b/pagePluto.html
@@ -40,11 +40,11 @@
     <div class="sidebar">
         <h2>Menu</h2> 
         <a href="/">Return to hub</a>
-        <a href="https://mrsofanthiel.github.io/Pluto-Desktop/index.html">Take me there</a>
+        <a href="https://mrsofanthiel.github.io/Web-Desktop-Classic/">Take me there</a>
     </div>
     <div class="content">
-        <h1>Pluto Web Desktop</h1>
-        <p>See for yourself. Pretty cool in my opinion, and it will get updates occasionally.</p>
+        <h1>Web Desktop</h1>
+        <p>This used to be a fork of Pluto, which is very epic, but I have changed it to a different fork.<br>It's neat, check it out I guess.</p>
     </div>
 </body>
 </html>
