Add literal windows XP
please dont hurt me MS, ill probably change it to react os later

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <a href="pageAAAAXY.html">Online AAAAXY</a>
         <a href="Annoying website/index.html">:) (Doesn't work)</a>
         <a href="pagePluto.html">Web Desktop</a>
+        <a href="pageXP.html">Literally Windows XP</a>
     </div>
     <div class="content">
         <h1>Welcome to my Website!</h1>
