--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             display: flex;
             height: 100vh;
             overflow: hidden;
+            cursor: url(http://www.rw-designer.com/cursor-extern.php?id=93718);
         }
         .sidebar {
             width: 200px;
